--- a/Ciencias.html
+++ b/Ciencias.html
@@ -25,6 +25,11 @@
 <body>
 
 <div class="portada">
+      <!-- Contador de visitas -->
+  <div class="contador">
+    <img style="border: 0px solid; display: inline" src="http://www.websmultimedia.com/contador-de-visitas.php?id=295778"></a><br><p class="parrafo">Contador de visitas</p>
+  </div>
+  <!-- Fin Contador de visitas -->
     <div class="logo">
         <img src="Caos_logo.png" width="150" height="150">
     </div>    
@@ -60,55 +65,57 @@
 
 
 <!-- Carrusel de imagenes -->
-<div class="block1">
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <div class="carousel">
-      <div class="carousel-inner">
-          <div class="item active" align="center">
-              <div class="carousel-caption d-none d-md-block">
-                <h1 class="des-noticias">El nuevo mapa estelar que revela los secretos ocultos de la Vía Láctea</h1>
-              </div>
-              <a class="imagen" href="categorias/ciencias/nuevo-mapa-estelar-1.html">
-              <img src="https://r1.abcimg.es/resizer/resizer.php?nuevoancho=620&imagen=%2F%2Fstatic1.abc.es%2Fmedia%2Fciencia%2F2021%2F04%2F22%2Fpia24571-mw-halo-stars-map-ko0B--620x349%40abc.jpg&medio=abc"></a>
-          </div>
-          <div class="item" align="center">
-              <div class="carousel-caption d-none d-md-block">
-                <h1 class="des-noticias">Descubierto el 'Unicornio', el agujero negro más cercano a la Tierra</h1>
-              </div>
-              <a class="imagen" href="categorias/ciencias/agujero-negro-mas-cercano-tierra-2.html">
-              <img src="https://static1.abc.es/media/ciencia/2021/04/22/agujeronegro-kGMF--620x349@abc.jpg"></a>
-          </div>
-          <div class="item" align="center">
-              <div class="carousel-caption d-none d-md-block">
-                <h1 class="des-noticias">La ESA advierte contra las constelaciones de satélites como la de Elon Musk</h1>
-              </div>
-              <a class="imagen" href="categorias/ciencias/contra-constelaciones-satelites-elon-musk-3.html">
-              <img src="https://static2.abc.es/media/ciencia/2021/04/20/colision-kiRD--620x349@abc.jpg"></a>
-          </div>
+<div class="carusel-line">
+  <div class="block1">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <div class="carousel">
+        <div class="carousel-inner">
+            <div class="item active" align="center">
+                <div class="carousel-caption d-none d-md-block">
+                  <h1 class="des-noticias">El nuevo mapa estelar que revela los secretos ocultos de la Vía Láctea</h1>
+                </div>
+                <a class="imagen" href="categorias/ciencias/nuevo-mapa-estelar-1.html">
+                <img src="https://r1.abcimg.es/resizer/resizer.php?nuevoancho=620&imagen=%2F%2Fstatic1.abc.es%2Fmedia%2Fciencia%2F2021%2F04%2F22%2Fpia24571-mw-halo-stars-map-ko0B--620x349%40abc.jpg&medio=abc"></a>
+            </div>
+            <div class="item" align="center">
+                <div class="carousel-caption d-none d-md-block">
+                  <h1 class="des-noticias">Descubierto el 'Unicornio', el agujero negro más cercano a la Tierra</h1>
+                </div>
+                <a class="imagen" href="categorias/ciencias/agujero-negro-mas-cercano-tierra-2.html">
+                <img src="https://static1.abc.es/media/ciencia/2021/04/22/agujeronegro-kGMF--620x349@abc.jpg"></a>
+            </div>
+            <div class="item" align="center">
+                <div class="carousel-caption d-none d-md-block">
+                  <h1 class="des-noticias">La ESA advierte contra las constelaciones de satélites como la de Elon Musk</h1>
+                </div>
+                <a class="imagen" href="categorias/ciencias/contra-constelaciones-satelites-elon-musk-3.html">
+                <img src="https://static2.abc.es/media/ciencia/2021/04/20/colision-kiRD--620x349@abc.jpg"></a>
+            </div>
+        </div>
+
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <br>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
       </div>
-
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <br>
-
-      <!-- Controls -->
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-          <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          <span class="sr-only">Next</span>
-      </a>
     </div>
-  </div>
-  <div>
-    <h1 class="text1">NOTICIAS NUEVAS, NOTICIAS NUEVAS, NOTICIAS NUEVAS, NOTICIAS NUEVAS, NOTICIAS NUEVAS, NOTICIAS NUEVAS,</h1>
-  </div>
+  </div> 
 </div>  
+    <div>  
+      <h1 class="text1">NOTICIAS NUEVAS, NOTICIAS NUEVAS, NOTICIAS NUEVAS, NOTICIAS NUEVAS, NOTICIAS NUEVAS, NOTICIAS NUEVAS,</h1>
+    </div>  
  
         <!-- JavaScript -->
         <script src="js/jquery-3.5.1.slim.min.js"></script>
