Se modifica dir de boton Iniciar Sesion

--- a/Actualidad.html
+++ b/Actualidad.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 <head>
@@ -59,7 +58,7 @@
         </ul>
       </li>
       <li><a href="#">Contacto</a></li>
-      <li><a href="inicio/login.html">Inciar Sesion</a></li>
+      <li><a href="login/login.html">Inciar Sesion</a></li>
     </ul>
   </div>
 </nav>
@@ -184,7 +183,7 @@
         </ul>
       </li>
       <li><a href="#">Contacto</a></li>
-      <li><a href="inicio/login.html">Inciar Sesion</a></li>
+      <li><a href="login/login.html">Inciar Sesion</a></li>
     </ul>
   </div>
 </nav>
