--- a/categorias/actualidad/cerveza.html
+++ b/categorias/actualidad/cerveza.html
@@ -59,7 +59,7 @@
                     </ul>
                 </li>
                 <li><a href="#">Contacto</a></li>
-                <li><a href="../../inicio/login.html">Inciar Sesion</a></li>
+                <li><a href="../../login/login.html">Inciar Sesion</a></li>
             </ul>
         </div>
     </nav>
