--- a/login/login.html
+++ b/login/login.html
@@ -30,6 +30,7 @@
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-success btn-lg">Iniciar sesión</button>
+                        <a href="registro.html" class="btn btn-success btn-lg" role="button">Registrarse</a>
                     </div>
                 </form>
             </div>
