--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </ul>
                 </li>
                 <li><a href="galeria/galeria.html">GALERIA</a></li>
-                <li><a href="inicio/login.html">Inciar Sesion</a></li>
+                <li><a href="login/login.html">Inciar Sesion</a></li>
             </ul>
         </div>
     </nav>
