Se agregan cambios a index

--- a/index.html
+++ b/index.html
@@ -121,20 +121,20 @@
     <div class="contenedor">
         <div class="item-not">
             <a href="categorias/ciencias/contra-constelaciones-satelites-elon-musk-3.html"><img class="item-img" src="https://static2.abc.es/media/ciencia/2021/04/20/colision-kiRD--620x349@abc.jpg" alt="" class="item-img"></a>
-            <div class="resumen">
-                <p>hola esto es un texto de prueba</p>
+            <div class="resumen" align="center">
+                <p>La ESA advierte contra las constelaciones de satélites como la de Elon Musk</p>
             </div>
         </div>
         <div class="item-not">
             <a href="categorias/actualidad/putin_amenazas.html"><img class="item-img" src="https://static.dw.com/image/57275383_303.jpg" alt="" class="img-min"></a>
-            <div class="resumen">
-                <p>hola esto es un texto de prueba</p>
+            <div class="resumen" align="center">
+                <p>Putin amenaza</p>
             </div>
         </div>
         <div class="item-not">
             <a href="categorias/ciencias/agujero-negro-mas-cercano-tierra-2.html"><img class="item-img" src="https://static1.abc.es/media/ciencia/2021/04/22/agujeronegro-kGMF--620x349@abc.jpg" alt="" class="img-min"></a>
-            <div class="resumen">
-                <p>hola esto es un texto de prueba </p>
+            <div class="resumen" align="center">
+                <p>Descubierto el 'Unicornio', el agujero negro más cercano a la Tierra</p>
             </div>
         </div>
     </div>
