--- a/admin/noticia-aceptada.html
+++ b/admin/noticia-aceptada.html
@@ -14,11 +14,11 @@
 <nav class="navbar">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">CAOS NEWS</a>
+      <a class="navbar-brand" href="../../index.html">CAOS NEWS</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="index.html">Home</a></li>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Administrar 
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="C:\Users\56948\proyecto-web\Bootstrap\proyecto-web\admin\subir-noticia.html">Administrar 
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">Crear noticia</a></li>
