--- a/Proyecto-final/admin/nuevas-noticias.html
+++ b/Proyecto-final/admin/nuevas-noticias.html
@@ -36,7 +36,7 @@
     <h1 class="card-title" align="center">Administrar noticias</h1>
     <br>
   <div class="card" style="width:400px" align="center">
-    <img class="card-img-top" src="C:\Users\56948\proyecto-web\Bootstrap\images\img_avatar1.png" alt="Card image" style="width:100%">
+    <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMfIKEo2RWJ3vH5CSCb3nShGPzpJOnwFaJsQ&usqp=CAU" alt="Card image" style="width:100%">
     <div class="card-body">
       <h4 class="card-title">Nicolás Contreras</h4>
       <h4 class="card-title">Peridista de Política</h4>
@@ -50,7 +50,7 @@
   <div class="container" align="center">
     <br>
   <div class="card" style="width:400px">
-    <img class="card-img-top" src="C:\Users\56948\proyecto-web\Bootstrap\images\img_avatar2.png" alt="Card image" style="width:100%">
+    <img class="card-img-top" src="https://www.latercera.com/resizer/V1d63PDh6mZKPx-u6mBhBIZqaI4=/900x600/smart/cloudfront-us-east-1.images.arcpublishing.com/copesa/YJVO2Q2R4FD4HO33THSA7W36EM.jpg" alt="Card image" style="width:100%">
     <div class="card-body">
       <h4 class="card-title">Diego Encina</h4>
       <h4 class="card-title">Peridista de Actualidad</h4>
@@ -65,7 +65,7 @@
     <div class="container" align="center">
     <br>
   <div class="card" style="width:400px" align="center">
-    <img class="card-img-top" src="C:\Users\56948\proyecto-web\Bootstrap\images\img_avatar3.png" alt="Card image" style="width:100%">
+    <img class="card-img-top" src="https://pbs.twimg.com/media/Cj6a39FWUAEAg94.jpg" alt="Card image" style="width:100%">
     <div class="card-body">
       <h4 class="card-title">Luis Ledezma</h4>
       <h4 class="card-title">Peridista de Astronomía</h4>
