--- a/Proyecto-final/login/login.html
+++ b/Proyecto-final/login/login.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   
   <title>LOGIN</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.min.js"></script>
+    <script src="login.js"></script>
   <link rel="stylesheet" type="text/css" href="login.css">
   <style>
  </style>
@@ -19,17 +22,17 @@
             <div class="image"></div>
             <div class="frm text-white-50">
                 <h1>LOGIN</h1>
-                <form>
+                <form  id="basic-form" name="basic-form" action="../admin/nuevas-noticias.html" method="POST">
                     <div class="form-group">
                         <label for="username">Usuario </label>
-                        <input type="text" class="form-control" id="username" placeholder="Ingresa tu usuario">
+                        <input type="text" class="form-control" id="username" name ="username" placeholder="Ingresa tu usuario">
                     </div>
                     <div class="form-group">
                         <label for="pwd">Contraseña</label>
-                        <input type="password" class="form-control" id="pwd" placeholder="Ingresa tu contraseña">
+                        <input type="password" class="form-control" id="pwd" name = "pwd" placeholder="Ingresa tu contraseña">
                     </div>
                     <div class="form-group">
-                        <a href="C:\Users\56948\proyecto-web\Bootstrap\proyecto-web\Proyecto-final\admin\nuevas-noticias.html" class="btn btn-success btn-lg" role="button">Iniciar Sesión</a>
+                        <button type="submit" class="btn btn-success btn-lg" role="button">Iniciar sesion</button>
                         <a href="C:\Users\56948\proyecto-web\Bootstrap\proyecto-web\Proyecto-final\login\registro.html" class="btn btn-success btn-lg" role="button">Registrarse</a>
                     </div>
                 </form>
